2012-10-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* devices.c: Fix the H: read function to return status $03 if the next read
  operation would yield EOF. This complies with Atari DOS behaviour and fixes
  Turbo BASIC's BLOAD.


2012-09-09  Kostas Nakos  <knakos@gmail.com>
* android/*: More UI fine tuning, new dialog for cartridge type selection
* afile.c, cartridge.[ch], ui.c: Moved cartridge types' descriptive text to
  a more central (reusable) location, hooked android port when a cartridge
  type cannot be detected.


2012-09-08  Kostas Nakos  <knakos@gmail.com>
* android/*: UI fine tuning, soft keyboard fix for jelly bean


2012-09-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* android/jni/jni.c: Fix ROM selection hack to support the well-known OSB NTSC
  ROM bundled with XFormer. That ROM is hacked and therefore it is not
  recognised as SYSROM_B_NTSC, but as SYSROM_800_CUSTOM.


2012-09-04  Kostas Nakos  <knakos@gmail.com>
* android/*: Natively support UI on post-Honeycomb devices


2011-08-27  James Wilkinson  <james@slor.net>
* config.guess: Detect Haiku as x86 BeOS.


2012-08-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sysrom.c: Fixed CRC32 of the CC01r4 OS ROM - the previous one was for a
  binary that I've myself incorrectly-assembled from sources.


2012-07-29  Kostas Nakos  <knakos@gmail.com>
* android/*: Update project to newer android sdk (jelly bean - 4.1),
             Fine tuning of the B: device handling,
             Fix audio stuttering on jelly bean,
             Fix keymap preference crash on jelly bean,
			 Fix keyboard mapping dialog on jelly bean


2012-07-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/CREDITS: Fix alphabetical order. Update my own contributions.


2012-06-02  Kostas Nakos  <knakos@gmail.com>
* android/*: Small tweaks to the touchscreen mode
* afile.c, cartridge.c: Temporary fix for non auto-detected cartridges, until
  the implementation of a proper menu


2012-05-20  Kostas Nakos  <knakos@gmail.com>