@@ -240,6 +240,9 @@ Jindrich Kubec <kubecj@asw.cz>
     - hours of testing on real Atari800XL
     - research on real cartridges
 
+Jerzy Kut <mono@atari.pl>
+    - MapRAM memory expansion for the XL/XE
+
 Chris Lam <lamcw@sun.aston.ac.uk>
     - RGB values for each Atari colour
 
